[gd_scene load_steps=8 format=3 uid="uid://du1228a0klk8h"]

[ext_resource type="PackedScene" uid="uid://d3c4o6gi6fpmw" path="res://Scenes/unit.tscn" id="1_xungh"]
[ext_resource type="Script" uid="uid://b07al47bwu8tf" path="res://Scenes/players/player.gd" id="2_i0rm5"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="2_pgd7o"]
[ext_resource type="Resource" uid="uid://birca03bds0wy" path="res://resources/units/players/stats_player_well_rounded.tres" id="3_wmypj"]
[ext_resource type="Script" uid="uid://dfokhw2nqu8bt" path="res://Scenes/players/trail.gd" id="4_ukk6y"]

[sub_resource type="Curve" id="Curve_3wset"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_pgd7o"]
radius = 27.0185

[node name="PlayerWellRounded" instance=ExtResource("1_xungh")]
collision_mask = 2
script = ExtResource("2_i0rm5")
dash_duration = 0.5
dash_speed_multi = 2.5
dash_cooldown = 0.5
stats = ExtResource("3_wmypj")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
top_level = true
position = Vector2(1, -33)
width = 60.0
width_curve = SubResource("Curve_3wset")
script = ExtResource("4_ukk6y")
player = NodePath("../..")

[node name="Shadow" parent="Visuals" index="1"]
z_index = 1

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("2_pgd7o")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(1, -33)
shape = SubResource("CircleShape2D_pgd7o")

[node name="DashTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="TrailTimer" type="Timer" parent="." index="5"]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
